# find_libpython

./: .pre-commit-config.yaml  LICENSE.md  README.md  investigate.py  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  tests.yml
src/find_libpython/: __init__.py  __main__.py
tests/: test_find_libpython.py
