[build-system]
requires = ["setuptools>=43", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "PL", # pylint
]
ignore = [
    "E501",  # Line too long
    "PLR0912",  # Too many branches
]
