[metadata]
name = find_libpython
version = 0.1.0
author = Takafumi Arakaki
maintainer = Kaleb Barrett
maintainer_email = dev.ktbarrett@gmail.com
license = MIT

[options]
packages =
    find_libpython
package_dir =
    = src

[options.entry_points]
console_scripts =
    find_libpython = find_libpython:main
