[metadata]
name = find_libpython
version = attr: find_libpython.__version__
url = https://github.com/ktbarrett/find_libpython
author = Takafumi Arakaki
maintainer = Kaleb Barrett
maintainer_email = dev.ktbarrett@gmail.com
license = MIT
description = Finds the libpython associated with your environment, wherever it may be hiding
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    libpython
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries

[options]
packages =
    find_libpython
package_dir =
    = src

[options.entry_points]
console_scripts =
    find_libpython = find_libpython:main
